Examples/test-suite/errors/pp_error_directive.i
%module xxx

#warning Print this warning

#error This is an error

#error Another error

#warning Another warning
